--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(22, 22, 22, .7), rgba(22, 22, 22, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(22, 22, 22, .7), rgba(22, 22, 22, .7)), url(../img/pexels-fauxels-3182773.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -356,11 +356,21 @@
     position: relative;
     overflow: hidden;
     box-shadow: 0 0 45px rgba(0, 0, 0, .07);
+    text-align: center; /* Center align the content */
+
 }
 
 .portfolio-inner img {
     transition: .5s;
+    max-width: 50%; /* Set the maximum width to 100% */
+    height: auto;
+
 }
+.navbar-brand svg {
+    width: 200px; /* Adjust width as needed */
+    height:100px; /* Adjust height as needed */
+}
+
 
 .portfolio-inner:hover img {
     transform: scale(1.1);
